Added basic css positioning

--- a/react-project/src/SideTab/SideTab.css
+++ b/react-project/src/SideTab/SideTab.css
@@ -1,4 +1,8 @@
 .SideTab {
-    background: steelblue;
+    width: 20%;
+    height: 700px;
     float: left;
+    background: #EEEEEE;
+    float: left;
+    border-right: 1px solid black;
 }
