added some more scelecton code and installed dependency for boostrap (testobject => profile button), also tried to add an images (see logo)

--- a/react-project/src/SideTab/SideTab.css
+++ b/react-project/src/SideTab/SideTab.css
@@ -1,8 +1,17 @@
 .SideTab {
     width: 20%;
-    height: 700px;
+    height: 730px;
     float: left;
-    background: #EEEEEE;
+    background: #FFF;
     float: left;
     border-right: 1px solid black;
+}
+
+#SideMenu{
+  height: 350px;
+}
+
+#QuickInfo{
+  padding-top: 30px;
+  border-top: 1px solid black;
 }
