--- a/react-project/src/Header/Header.css
+++ b/react-project/src/Header/Header.css
@@ -1,11 +1,12 @@
 #header {
-    background-color: #5C9EAD;
+    background-color: white;
     width: 100%;
-    height: 45px;
+    height: 55px;
     border-bottom: 1px solid black;
 }
 
 #LogInArea {
+  padding-top: 7px;
   width: 30%;
   float: right;
   height: 100%;
@@ -15,4 +16,10 @@
   width: 70%;
   height: 100%;
   float: left;
+}
+
+#logo{
+  float: left;
+  padding-top: 8px;
+  padding-left: 10px;
 }
