--- a/react-project/src/MainContent/MainContent.css
+++ b/react-project/src/MainContent/MainContent.css
@@ -7,12 +7,14 @@
 }
 
 #Tools {
+  padding-top: 30px;
   width: 30%;
   height: 700px;
   float: right;
 }
 
 #CalenderArea {
+  padding-top: 30px;
   width: 70%;
   height: 700px;
   float: left;
