changed to boostrap grid layout insted of divs and css floats

--- a/react-project/src/App.css
+++ b/react-project/src/App.css
@@ -26,3 +26,14 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.no-gutter > [class*='col-'] {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.show-grid.row{
+  border: solid black 1px;
+  margin:0px;
+  padding: 0px;
+}
