--- a/react-project/src/Header/Header.css
+++ b/react-project/src/Header/Header.css
@@ -1,25 +1,24 @@
 #header {
-    background-color: white;
+    background-color: LightGray;
     width: 100%;
     height: 55px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid Gray;
 }
 
 #LoginArea {
-  padding-top: 7px;
+  padding-top: 10px;
   width: 30%;
   float: right;
   height: 100%;
 }
 
 #Title {
+  padding-top: 15px;
   width: 70%;
   height: 100%;
   float: left;
 }
 
-#logo{
-  float: left;
-  padding-top: 8px;
-  padding-left: 10px;
+#Title h3 {
+  color: DimGray ;
 }
