--- a/react-project/src/SideTab/SideTab.css
+++ b/react-project/src/SideTab/SideTab.css
@@ -1,11 +1,15 @@
 .SideTab {
-    bordert: 1px solid black;
+  padding-top: 40px;
 }
 
-#SideMenu{
+.SideMenu{
 
 }
 
-#QuickInfo{
+.QuickInfo{
+  border-radius: 10px;
+  border: LightGray solid 1px;
+  padding: 10px;
+  margin-top: 25px;
   height: 400px;
 }
