Add shift now work for specific hours

--- a/react-project/src/MainContent/CalenderPage/Tools/Tools.css
+++ b/react-project/src/MainContent/CalenderPage/Tools/Tools.css
@@ -1,8 +1,8 @@
-.AddShift{
-  height: 100px;
-  width: 100px;
+/*.AddShift{
+  height: 500px;
+  width: 500px;
 }
-
+*/
 #CloseBtn{
   background-color: lightgrey;
 }
