Currently working on the css for addShift

--- a/react-project/src/MainContent/CalenderPage/Tools/Tools.css
+++ b/react-project/src/MainContent/CalenderPage/Tools/Tools.css
@@ -32,3 +32,16 @@
   padding-left: 10px;
   float:left;
 }
+/*
+.dayPicker{
+  background-color: red;
+}
+
+.startPicker{
+  background-color: blue;
+}
+
+.endPicker{
+  background-color: green;
+}
+*/
