Made some css changes for the addshift popup but im not done. Moving on with delete shift

--- a/react-project/src/MainContent/CalenderPage/Tools/Tools.css
+++ b/react-project/src/MainContent/CalenderPage/Tools/Tools.css
@@ -32,6 +32,23 @@
   padding-left: 10px;
   float:left;
 }
+
+
+.title{
+  float:left;
+}
+
+.container-addShift{
+  display: grid;
+
+}
+
+.modal-body{
+  display: grid;
+  grid-template-rows: auto auto auto auto;
+  grid-template-columns: auto auto;  
+}
+
 /*
 .dayPicker{
   background-color: red;
