working on the navbar

--- a/react-project/src/Header/Header.css
+++ b/react-project/src/Header/Header.css
@@ -22,3 +22,9 @@
 #Title h3 {
   color: DimGray ;
 }
+
+#navBartest{
+    webkit-flex-direction: row;
+    ms-flex-direction: row;
+    flex-direction: row;
+}
