--- a/react-project/src/MainContent/CalenderPage/Tools/Tools.css
+++ b/react-project/src/MainContent/CalenderPage/Tools/Tools.css
@@ -1,11 +1,21 @@
-/*.AddShift{
-  height: 500px;
-  width: 500px;
+
+.weekbuttons{
+  float: left;
 }
-*/
+
+.newshiftbuttongroup{
+  padding-right: 10%;
+}
+
+.dropdownbutton{
+  float:right;
+  padding-left: 20px;
+}
+
 #CloseBtn{
   background-color: lightgrey;
 }
+
 .Tooldiv{
   width: 100%;
 }
@@ -17,7 +27,7 @@
 
 .titleDiv{
   padding-left: 0px;
-  color: darkGreen;
+  color: #3E3F3B;
   font-size: 16px;
   display:inline;
   float: left;
