--- a/react-project/src/MainContent/CalenderPage/CalenderPage.css
+++ b/react-project/src/MainContent/CalenderPage/CalenderPage.css
@@ -1,7 +1,5 @@
 
 #mainPageWrapper{
-
-
 }
 
 
@@ -14,17 +12,30 @@
   float:left;
 }
 
+
+/*
+Test with grids
+*/
+
+#calenderDays{
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr;
+  align-self: stretch;
+}
+
+
+/*
 #calenderDays{
   margin: auto;
   width: 90%;
   padding-top: 10px;
 }
-
+*/
 #daysContainer{
   width: 100%;
 }
 
-
+/*
 .timeTable{
   width:44px;
   height: 25px;
@@ -32,14 +43,15 @@
   padding-right: 4px;
   color:Grey;
 }
-
+*/
+/*
 #timeTableContainer{
   float:left;
   width: 3.4%;
   padding-top: 20px;
   border-right: solid 1px LightGray;
 }
-
+*/
 .WeekTitle{
   height: 20px;
   color: #3E3F3B;
