Change from capital letter to small

--- a/react-project/src/MainContent/CalenderPage/Tools/Tools.css
+++ b/react-project/src/MainContent/CalenderPage/Tools/Tools.css
@@ -119,7 +119,7 @@ Grid formation
 #form-grid{
   display: grid;
   grid-template-areas:
-    "DayPicker description"
+    "dayPicker description"
     "dayPicker description"
     "startTime endTime"
     "submitDiv submitDiv";
