fixed some errors and made the date for each calenderday responsive

--- a/react-project/src/MainContent/CalenderPage/Tools/Tools.css
+++ b/react-project/src/MainContent/CalenderPage/Tools/Tools.css
@@ -141,6 +141,13 @@ Edits both end and start picker for time
 
   #submitDiv{
     margin-top:20px;
+    line-height: 0px;
+  }
+
+  #submitBtn{
+    color: white;
+    background-color: green;
+    line-height: 3px;
   }
 
   #description{
